<resources>
    <string name="app_name">CarsYalla</string>
    <string name="webserviceUsername">54732964</string>
    <string name="webservicePassword">259743</string>
    <string name="search">بحث</string>
    <string name="email">البريد الاكترونى</string>
    <string name="password">كلمة السر</string>
    <string name="login">تسجيل الدخول</string>
    <string name="forgetpassword">نسيت كلمه السر؟</string>
    <string name="facebooklogin">فيس بوك</string>
    <string name="donthaveaccount">لا املك حساب؟</string>
    <string name="creataccount">انشاء حساب</string>
    <string name="google">جوجل</string>
    <string name="userName">الاسم</string>
    <string name="brand">الماركه</string>
    <string name="gouvernment">المحافظه</string>
    <string name="place">المكان</string>
    <string name="carnum">رقم لوحه السياره</string>
    <string name="seachstolencar">ابحث عن السياره المسروقه</string>
    <string name="searchcenter">بحث عن مركز صيانه</string>
    <string name="chaseNum">رقم الشاسيه</string>
    <string name="centername">اسم المركز</string>
    <string name="ownername">اسم المالك</string>
    <string name="centerdescripition">وصف المركز</string>
    <string name="services">الخدمات</string>
    <string name="phone">الموبايل</string>
    <string name="country">البلد</string>
    <string name="city">المدينه</string>
    <string name="region">المنطقه</string>
    <string name="address">العنوان</string>
    <string name="phonenum">رقم الهاتف</string>
    <string name="home">الرئيسيه</string>
    <string name="favourite">المفضله</string>
    <string name="addcenter">اضافه مركز</string>
    <string name="problems">شكاوى و تواصل معنا</string>
    <string name="contactus">تواصل معنا</string>
    <string name="currentLocation">موقع المركز</string>
    <string name="timework">مواعيد العمل</string>
    <string name="addAlbum">اضافه البوم صور</string>
    <string name="addAlbumChoise">اضف البوم (اختيارى)</string>
    <string name="reserve">احجز</string>
    <string name="centerDetails">تفاصيل المركز</string>
    <string name="comments">تعليقات</string>
    <string name="discount">نسبة الخصم</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="model">الموديل</string>
    <string name="manufacturingyear">سنه الصنع</string>
    <string name="reservationDate">تاريخ الحجز</string>
    <string name="reservenow">احجز الان</string>
    <string name="choose_brand">اختر الماركه</string>
    <string name="choose_model">اختر الموديل</string>
    <string name="reservationDone">تم الحجز بنجاح</string>
    <string name="myappoienments">حجوزاتى</string>
    <string name="choose_service">اختر الخدمه</string>
    <string name="search_result">نتائج البحث</string>
    <string name="myloca">احداثيات الموقع</string>
    <string name="pleasewait">جارى اضافة البيانات...</string>
    <string name="searchbyname">البحث بالاسم</string>
    <string name="detailsSearch">البحث بالتفصيل</string>
    <string name="myReservation">حجوزاتى</string>
    <string name="typecomment">اضف تعليق...</string>
    <string name="rating">تقييم</string>
    <string name="rate">قيم الزياره</string>
    <string name="addStolenCar">اضف سياره مسروقه</string>
    <string name="plateType">نوع اللوحات</string>
    <string name="serial">رقم الشاسية</string>
    <string name="plate_number">رقم اللوحات</string>
    <string name="color">اللون</string>
    <string name="stolenAddress">عنوان السرقة</string>
    <string name="notes">ملاحظات</string>
    <string name="addsrolenCarImage">اضف صوره السياره</string>
    <string name="addLienceCar">اضف صوره الرخصه</string>
    <string name="plate_type">نوع اللوحات</string>
    <string name="type_1">ارقام</string>
    <string name="type_2">حروف و ارقام</string>
    <string name="cancel">الغاء</string>
    <string name="map">الخريطة</string>
    <string name="canceliondone">تم الغاء الحجز</string>
    <string name="noconnection">لا يوجد اتصال بالانترنت</string>
    <string name="tryAgain">حاول مجددا</string>
    <string name="ratingvisit">تقييم الزياره</string>
    <string name="facebook_app_id">2304459216257296</string>
    <string name="loginprotocolscheme">fb2304459216257296</string>
    <string name="welcome">مرحبا</string>
    <string name="show_ratingsecretry">اظهر التقييم بسريه (بدون اسم)</string>
    <string name="yourratingtocenter">ما هو تقييمك للمركز؟</string>
    <string name="addcomment">اضف تعليق</string>
    <string name="send">ارسال</string>
    <string name="holidays">ايام الاجازات</string>
    <string name="brands">الماركات</string>
    <string name="service">الخدمه</string>
    <string name="message">نص الرساله</string>
    <string name="send_problem">ارسال الشكوى</string>
    <string name="skip">تخطى؟</string>
    <string name="sort">رتب</string>
    <string name="all">جميع المراكز</string>
    <string name="nearest">الاقرب اليك</string>
    <string name="user_nav_name">اسم المستخدم</string>
    <string name="edtiprofile">تعديل بياناتى</string>
    <string name="changePass">تغيير كلمة السر؟</string>
    <string name="change_pass">تغيير كلمة السر</string>
    <string name="oldpass">كلمة السر القديمه</string>
    <string name="newpass">كلمة السر الجديده</string>
    <string name="newpassre">اعادة كتابة كلمة السر</string>
    <string name="addreportedcar">اضف سيارة مشكوك بها</string>
    <string name="phoneormail">رقم الهاتف او البريد الالبكترونى</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
