<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context="com.carsyalla.www.cars.rating">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/nested"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:text="@string/ratingvisit"
        android:gravity="center"
        android:background="@color/blue"
        android:fontFamily="@font/heading"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/green"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/heading"
            android:gravity="center"
            android:id="@+id/username"
            android:layout_marginRight="@dimen/_5sdp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/heading"
            android:gravity="center"
            android:text="@string/welcome"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/heading"
            android:gravity="center"
            android:id="@+id/centerName"
            android:layout_marginRight="@dimen/_5sdp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/heading"
            android:gravity="center"
            android:text="@string/rating"
            />
    </LinearLayout>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:gravity="right|center"
        android:text="@string/show_ratingsecretry"
        android:drawablePadding="@dimen/_10sdp"
        android:textSize="@dimen/_13ssp"
        android:id="@+id/show_hidden"
        android:fontFamily="@font/phargraphe"
        android:layout_marginTop="@dimen/_20sdp"
        android:buttonTint="@color/green"
        android:layout_marginRight="@dimen/_10sdp"
        android:layoutDirection="rtl"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="#ddd"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="right"
        android:paddingRight="@dimen/_10sdp"
        >
        <TextView
            android:layout_weight=".85"
            android:layout_width="0dp"
            android:text="@string/yourratingtocenter"
            android:gravity="center|right"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/green"
            android:fontFamily="@font/phargraphe"
            android:paddingRight="@dimen/_10sdp"
            android:layout_height="match_parent" />
        <ImageView
            android:layout_weight=".1"
            android:layout_width="0dp"
            android:tint="@color/green"
            android:layout_gravity="center"
            android:src="@drawable/caricon"
            android:layout_height="@dimen/_25sdp" />
    </LinearLayout>
    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:numStars="5"
        android:progressTint="@color/blue"
        android:secondaryProgressTint="#000000"
        android:stepSize="0.3"
        android:layout_gravity="center_horizontal"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:src="#ddd"
        android:layout_marginTop="@dimen/_10sdp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:text="@string/addcomment"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/green"
        android:fontFamily="@font/phargraphe"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:gravity="center|right"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:background="@drawable/commentbackground"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:gravity="right"
        android:id="@+id/addcomment"
        android:padding="@dimen/_7sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        />
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_alignParentBottom="true"
        android:id="@+id/send"
        android:fontFamily="@font/heading"
        android:background="@color/blue"
        android:text="@string/send"
        android:textSize="@dimen/_13ssp" />
</RelativeLayout>