<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/test"
    tools:context="com.carsyalla.www.cars.problems">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:text="@string/problems"
        android:gravity="center"
        android:background="@color/blue"
        android:fontFamily="@font/heading"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/green"
        android:textStyle="bold"
        />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp"
                android:src="@drawable/carsyalla"
                android:layout_marginTop="@dimen/_30sdp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/userName"
                android:fontFamily="@font/phargraphe"
                android:textSize="@dimen/_12ssp"
                android:gravity="center|right"
                android:paddingRight="@dimen/_10sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:id="@+id/name"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:drawableRight="@drawable/user"
                android:background="@drawable/emailbackground"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/phonenum"
                android:textSize="@dimen/_12ssp"
                android:gravity="center|right"
                android:inputType="number"
                android:paddingRight="@dimen/_10sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:id="@+id/phone"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableRight="@drawable/phone"
                android:background="@drawable/emailbackground"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/emailbackground"
                android:gravity="right"
                android:id="@+id/message"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/phargraphe"
                android:paddingRight="@dimen/_10sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingTop="@dimen/_3sdp"
                android:hint="@string/message"
                />
            <Button
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/menu"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:textSize="@dimen/_13ssp"
                android:fontFamily="@font/heading"
                android:id="@+id/send_problem"
                android:text="@string/send_problem"
                android:layout_height="@dimen/_30sdp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>